01-SAC.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sac-app
spec:
  replicas: 3
  selector:
    matchLabels:
      role: sac-app
  template:
    metadata:
      labels:
        role: sac-app
    spec:
      containers:
      - name: cn-sac-app
        image: marangelogit/sac-app:v1.0.0
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: sac-svc   
spec:  
  ports:
  - port: 80
    targetPort: 80
  selector:
    role: sac-app
