03-Gumanet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gnet-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gnet-app
  template:
    metadata:
      labels:
        app: gnet-app
    spec:
      containers:
      - name: gnet-app
        image: marangelogit/gumanet:v3
        ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gnet-svc
spec:
  type: LoadBalancer
  selector:
    app: gnet-app
  ports:
  - port: 8080
    targetPort: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations :
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: gnet-svc
            port:
              number: 8080
